--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,5 +1,5 @@
 <section id="about-me" #aboutMe>
-  <img id="shape2" src="../../assets/img/shape2.svg" />
+  <img id="shape2" src="assets/img/shape2.svg" />
   <div id="about-me-container">
     <div
       data-aos="slide-right"
@@ -18,7 +18,7 @@
         my work.
       </p>
       <div class="text-container">
-        <img src="../../assets/img/light.svg" alt="glow plug icon" />
+        <img src="assets/img/light.svg" alt="glow plug icon" />
         
         <p>
           I'm really passionate about programming, especially when it comes to
@@ -27,7 +27,7 @@
         </p>
       </div>
       <div class="text-container">
-        <img src="../../assets/img/puzzle.svg" alt="puzzle icon" />
+        <img src="assets/img/puzzle.svg" alt="puzzle icon" />
         <p>
           A big goal for me is to join interesting projects actively. Working
           with teams who share my love for creative solutions is really
@@ -44,7 +44,7 @@
       id="circle-pic-container"
     >
       <div class="green-circle">
-        <img src="../../assets/img/profile-pic.png" />
+        <img src="assets/img/profile-pic.png" />
       </div>
       <div id="about-me-line"></div>
     </div>
