--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -38,11 +38,11 @@
           />
           <img
             *ngIf="fieldStatus.name"
-            src="../../assets/img/icons/Frame.svg"
+            src="assets/img/icons/Frame.svg"
           />
           <img
             *ngIf="!fieldStatus.name && formActive"
-            src="../../assets/img/icons/invaild.svg"
+            src="assets/img/icons/invaild.svg"
           />
         </div>
 
@@ -69,13 +69,13 @@
 
           @if(fieldStatus.email){
           <img
-            src="../../assets/img/icons/Frame.svg"
+            src="assets/img/icons/Frame.svg"
           />
         }
 
           <img
             *ngIf="!fieldStatus.email && formActive"
-            src="../../assets/img/icons/invaild.svg"
+            src="assets/img/icons/invaild.svg"
           />
         </div>
 
@@ -99,11 +99,11 @@
           ></textarea>
           <img
             *ngIf="fieldStatus.message"
-            src="../../assets/img/icons/Frame.svg"
+            src="assets/img/icons/Frame.svg"
           />
           <img
             *ngIf="!fieldStatus.message && formActive"
-            src="../../assets/img/icons/invaild.svg"
+            src="assets/img/icons/invaild.svg"
           />
         </div>
         <div class="input-container">
@@ -152,7 +152,7 @@
       <img
         onclick="window.location.href='#'"
         class="pageUp"
-        src="../../assets/img/icons/Go up button.svg"
+        src="assets/img/icons/Go up button.svg"
         alt="Up Page Arrow"
       />
     </div>
