--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,19 +10,19 @@
         <a href="https://github.com/Akanshu17258" target="_blank">
           <img
             class="socialIcon gitHubIcon"
-            src="../../assets/img/icons/gitHubIcon.svg"
+            src="assets/img/icons/gitHubIcon.svg"
             alt="Github Icon"
         /></a>
   
         <a  href="mailto:akanshusoni.ait@gmail.com">
           <img
             class="socialIcon emailIcon."
-            src="../../assets/img/icons/emailIcon.svg"
+            src="assets/img/icons/emailIcon.svg"
             alt="Email Icon"
           />
         </a>
         <a href="https://www.linkedin.com/in/akanshu-soni/" target="_blank">
-          <img src="../../assets/img/icons/linkedInIcon.svg" class="socialIcon" alt="Description of the image">
+          <img src="assets/img/icons/linkedInIcon.svg" class="socialIcon" alt="Description of the image">
       </a>
       </div>
     </div>
