--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,17 +1,17 @@
 <section id="intro">
-  <img class="shape1" src="../../assets/img/shape.1.svg" />
-  <img class="shape-mobile1" src="../../assets/img/Vectorshape.svg" />
+  <img class="shape1" src="assets/img/shape.1.svg" />
+  <img class="shape-mobile1" src="assets/img/Vectorshape.svg" />
 
 
   <div id="intro-container">
     <div id="me-container">
       <img
         class="green-purple-shadow"
-        src="../../assets/img/greenPurpleShadow.svg"
+        src="assets/img/greenPurpleShadow.svg"
         alt=""
       />
 
-      <img id="me" src="../../assets/img/profile-pic.png" alt="A picture of myself" />
+      <img id="me" src="assets/img/profile-pic.png" alt="A picture of myself" />
     </div>
 
     <div id="introduceing-container">
@@ -39,19 +39,19 @@
         <a href="https://github.com/Akanshu17258" target="_blank">
           <img
             class="socialIcon gitHubIcon"
-            src="../../assets/img/icons/gitHubIcon.svg"
+            src="assets/img/icons/gitHubIcon.svg"
             alt="Github Icon"
         /></a>
   
         <a  href="mailto:akanshusoni.ait@gmail.com">
           <img
             class="socialIcon emailIcon."
-            src="../../assets/img/icons/emailIcon.svg"
+            src="assets/img/icons/emailIcon.svg"
             alt="Email Icon"
           />
         </a>
         <a href="https://www.linkedin.com/in/akanshu-soni/" target="_blank">
-          <img src="../../assets/img/icons/linkedInIcon.svg" class="socialIcon" alt="Description of the image">
+          <img src="assets/img/icons/linkedInIcon.svg" class="socialIcon" alt="Description of the image">
       </a>
   
         <a class="regularLink mail" href="mailto:akanshusoni.ait@gmail.com"
