--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,6 +1,6 @@
 <section id="portfolio" #portfolio>
-  <img class="shape4" src="../../assets/img/shape4.svg" />
-  <img class="shape5" src="../../assets/img/shape5.svg" />
+  <img class="shape4" src="assets/img/shape4.svg" />
+  <img class="shape5" src="assets/img/shape5.svg" />
   <div id="headline-container">
     <div style="opacity: 0" class="long-line"></div>
     <div class="flex-container">
