--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,5 +1,5 @@
 <section id="skills" #skills>
-  <img class="shape3" src="../../assets/img/shape3.svg" alt="" />
+  <img class="shape3" src="assets/img/shape3.svg" alt="" />
   <div id="skills-container">
     <button
       onclick="window.location.href='#contact'"
